--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,7 @@
     font-family: 'Montserrat', sans-serif;
   
   }
-  
+  /*NAVBAR*/
   nav {
     background-color: #F2E5D7;
     font-family: Arial, sans-serif;
@@ -66,3 +66,31 @@
 
 
   }
+/*BILLEDE OG OVERSKRIFT*/
+  .havn{
+    width: 100%;
+    height: 300px;
+    filter: brightness(50%);
+    position: relative;
+      }
+    
+      .overskrift1{
+    position: absolute;
+    padding-bottom: 50px;
+    
+    
+      }
+    
+    
+      .container {
+        position: relative;
+      }
+      
+      .overskrift {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 1;
+        color: #FFFFFF;
+      }
