--- a/stylesheet.css
+++ b/stylesheet.css
@@ -108,8 +108,8 @@
 .slider-container {
   display: flex;
   justify-content: center;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  padding-bottom: 50px;
+  padding-top: 50px;
 }
 
   .slider {
