--- a/stylesheet.css
+++ b/stylesheet.css
@@ -226,7 +226,20 @@ text-align: center;
   background-color: #ffffff;
   font-weight: bold;
   font-size: 16px;
+}
 
+/*responsive*/
+@media(max-width:767px) {
+  .footer-col {
+      width: 50%;
+      margin-bottom: 30px;
+  }
+}
 
-
+/*responsive*/
+@media(max-width:574px) {
+  .footer-col {
+      width: 100%;
+      margin-bottom: 30px;
+  }
 }
