--- a/stylesheet.css
+++ b/stylesheet.css
@@ -64,6 +64,7 @@
     text-decoration: none;
     display: block;
     padding: 10px;
+
   }
 
 
@@ -206,7 +207,6 @@
 height: 100%;
 flex-grow: 1;
 float: right;
-;
 
 }
 .sponsorer{
@@ -242,3 +242,86 @@ text-align: center;
     color: white;
     display: flex;
   }
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.navbar {
+  min-height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 24px;
+}
+
+.nav-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 60;
+}
+
+.nav-branding {
+  font-size: 2rem;
+}
+
+.nav-link {
+  transition: 0.7s ease;
+}
+
+.nav-link:hover {
+  color: #524897;
+}
+
+.hamburger {
+  display: none;
+  cursor: pointer;
+}
+
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: blue;
+}
+
+@media(max-width:768px) {
+  .hamburger{
+    display: block;
+  }
+.hamburger.active .bar:nth-child(2) {
+  opacity: 0;
+}
+.hamburger.active .bar:nth-child(1) {
+  transition: translateY(8px) rotate(45deg);
+}
+.hamburger.active .bar:nth-child(3) {
+  transition: translateY(-8px) rotate(-45deg);
+}
+.nav-menu {
+  position: fixed;
+  left: -100%;
+  top: 70px;
+  gap: 0;
+  flex-direction: column;
+  background-color: #483285;
+  width: 100%;
+  text-align: center;
+  transition: 0.3s;
+}
+
+.nav-item{
+  margin: 16px 0;
+}
+.nav-menu.active{
+  left: 0;
+}
+}
