--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,7 @@
   list-style: none;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+  
 }
 
 main {
@@ -46,6 +47,10 @@ a{
   justify-content: space-between;
   align-items: center;
   padding: 0 24px;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  background:#F2E5D7;
 }
 
 .nav-menu {
@@ -161,6 +166,8 @@ a {
   height: 300px;
   filter: brightness(50%);
   position: relative;
+  margin: 0px;
+
 }
 
     .overskrift1{
@@ -173,6 +180,7 @@ a {
 
     .container {
       position: relative;
+      margin-top: 60px;
     }
 
     .overskrift {
