--- a/stylesheet.css
+++ b/stylesheet.css
@@ -339,6 +339,7 @@ font-size: 16px;
   border: 20px;
   padding-top: 20px;
   text-align: center;  
+  width: 735px;
    }
   #scroll-button{
    border: solid;
